# Cproject

CMakeProject1/CMakeProject1/: CMakeLists.txt  CMakeProject1.h  main.c
CMakeProject2/: CMakeLists.txt
CMakeProject2/CMakeProject2/: CMakeProject2.h
List/: CMakeLists.txt  main.c
caishuzi/: CMakeLists.txt  main.c
学生信息管理系统/: 学生信息管理系统.sln
学生信息管理系统/学生信息管理系统/: main.c  学生信息管理系统.vcxproj
学生信息管理系统/学生信息管理系统/x64/Debug/: vc143.idb  学生信息管理系统.exe.recipe  学生信息管理系统.ilk
学生信息管理系统/学生信息管理系统/x64/Debug/学生信息管理系统.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  学生信息管理系统.lastbuildstate
